@@ -1,3 +1,10 @@
+2000-08-08  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* mail-threads.c (queue_window_delete_event_cb): Callback for
+	"delete_event", just doing nothing.
+	(create_queue_window): Connect it to the "delete_event" signal of
+	the progress dialog.
+
 2000-08-08  Peter Williams  <peterw@helixcode.com>
 
 	* mail-threads.c (remove_next_pending): Sanity check for
